Code cleaning and GUI documentation